--- a/index.html
+++ b/index.html
@@ -2,21 +2,64 @@
 <html lang="en">
   <head <meta charset="UTF-8">
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./css/fontawesome.min.css">
+    <link rel="stylesheet" href="./css/all.min.css">
     <title>📁 Admin Dashboard</title> 
   </head>
   <body>
     <div class="wrapper">
-
       <aside class="aside-wrapper">
-        LEFT
+
+        <hgroup class="aside-title">
+          <div class="title"><i class="fa-solid fa-bars icon"></i>
+            DASHBOARD
+          </div>
+        </hgroup>
+
+        <div class="menu">
+          <div class="comun">
+            <div class="item"><i class="fa-solid fa-house icon"></i>
+              Home
+            </div>
+            <div class="item"><i class="fa-solid fa-user icon"></i>
+              User
+            </div>
+            <div class="item"><i class="fa-solid fa-message icon"></i>
+              Messages
+            </div>
+            <div class="item"><i class="fa-solid fa-clock-rotate-left icon"></i>
+              History
+            </div>
+            <div class="item"><i class="fa-solid fa-list-check icon"></i>
+              Tasks
+            </div>
+            <div class="item"><i class="fa-solid fa-people-group icon"></i>
+              Community
+            </div>
+          </div>
+
+          <div class="personal">
+            <div class="item"><i class="fa-solid fa-gear icon"></i>
+              Settings
+            </div>
+            <div class="item"><i class="fa-solid fa-question icon"></i>
+              Support
+            </div>
+            <div class="item"><i class="fa-solid fa-shield-halved icon"></i>
+              Privacy
+            </div>
+          </div>
+
+        </div>
+
       </aside>
 
       <main class="main-wrapper">
           <header class="header-wrapper">
-            RIGHT
+            HEADER
           </header>
           <section class="section-wrapper">
-            RIGHT2
+            SECTION
           </section>
       </main>
 
