Finished <Announcements>, <Trending> is partially done but needs some last touches

--- a/index.html
+++ b/index.html
@@ -215,20 +215,106 @@
             </div>
 
             <div class="right-sidebar">
+
               <div class="new">
+              <div class="announcements-wrapper">
+                <div class="announcement">
+                  Announcements
+                </div>
+              </div>
                 <div class="new-post">
-                  NEW1 
-                </div> 
+                  <div class="new-post-wrapper">
+                    <div class="new-post-title">
+                      The new stuff! 
+                    </div>
+                    <div class="new-post-content">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </div>
+                  </div>
+
+                  <div class="separator"></div>
+
+                  <div class="new-post-wrapper">
+                    <div class="new-post-title">
+                      The best of the best!
+                    </div>
+                    <div class="new-post-content">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </div>
+                  </div>
+
+                  <div class="separator"></div> 
+
+                  <div class="new-post-wrapper">
+                    <div class="new-post-title">
+                      A must read!
+                    </div>
+                    <div class="new-post-content">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.
+                    </div>
+                  </div>
+
+              </div> 
               </div>
               <div class="trending">
                 <div class="trending-post">
-                  TRENDING1
+
+                  <div class="trending-post-wrapper">
+
+                    <div class="trending-user">  
+                      icon
+                      <div class="trending-post-name-bio">
+                        <div class="trending-post-name">
+                          @name
+                        </div>
+                        <div class="trending-post-bio">
+                          mybio
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="trending-user">  
+                      icon
+                      <div class="trending-post-name-bio">
+                        <div class="trending-post-name">
+                          @name
+                        </div>
+                        <div class="trending-post-bio">
+                          mybio
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="trending-user">  
+                      icon
+                      <div class="trending-post-name-bio">
+                        <div class="trending-post-name">
+                          @name
+                        </div>
+                        <div class="trending-post-bio">
+                          mybio
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="trending-user">  
+                      <img src="img/icon4.jpg" alt="Jose Larralde" class="trending-icon">
+                      <div class="trending-post-name-bio">
+                        <div class="trending-post-name">
+                          @name
+                        </div>
+                        <div class="trending-post-bio">
+                          mybio
+                        </div>
+                      </div>
+                    </div>
+
+                  </div>
                 </div>
               </div>
             </div>
           </section>
       </main>
-
     </div>
   </body>
 </html>
