Trending is done, the project is finished, perhaps add JS integration later

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               
               <div class="section-title">
                 <div class="posts-title">
-                  Your projects:
+                  Your projects
                 </div> 
               </div>
 
@@ -257,54 +257,66 @@
               </div> 
               </div>
               <div class="trending">
+                
+                <div class="trending-title-wrapper">
+                  <div class="trending-title">
+                    Trending
+                  </div>
+                </div>
                 <div class="trending-post">
 
                   <div class="trending-post-wrapper">
 
                     <div class="trending-user">  
-                      icon
+                      <img src="img/icon2.jpg" alt="Michael Jackson" class="trending-icon">
                       <div class="trending-post-name-bio">
                         <div class="trending-post-name">
-                          @name
+                          @michaeljackson
                         </div>
                         <div class="trending-post-bio">
-                          mybio
+                          You already know me, king of pop, love moonwalking.
                         </div>
                       </div>
                     </div>
 
+                    <div class="separator"></div>
+
                     <div class="trending-user">  
-                      icon
+                      <img src="img/icon1.jpg" alt="Paul Mccartney" class="trending-icon">
                       <div class="trending-post-name-bio">
                         <div class="trending-post-name">
-                          @name
+                          @paulmccartney
                         </div>
                         <div class="trending-post-bio">
-                          mybio
+                          Singer of, perhaps, the most well known band in the world.
                         </div>
                       </div>
                     </div>
 
+                    <div class="separator"></div>
+
                     <div class="trending-user">  
-                      icon
+                      <img src="./img/Screenshot from 2024-09-12 07-56-21.png" alt="Gardel" class="trending-icon">
                       <div class="trending-post-name-bio">
                         <div class="trending-post-name">
-                          @name
+                          @carlosgardel
                         </div>
                         <div class="trending-post-bio">
-                          mybio
+                          Singer, writer, actor. What else could I possibly be?
                         </div>
                       </div>
                     </div>
 
+                    <div class="separator"></div>
+
                     <div class="trending-user">  
-                      <img src="img/icon4.jpg" alt="Jose Larralde" class="trending-icon">
+                      <img src="img/Screenshot from 2024-09-12 07-55-18.png" alt="Jose Larralde" class="trending-icon">
                       <div class="trending-post-name-bio">
                         <div class="trending-post-name">
-                          @name
+                          @joselarralde
                         </div>
                         <div class="trending-post-bio">
-                          mybio
+                          Known as "Pampa", the best when talking about "Milonga". 
                         </div>
                       </div>
                     </div>
